--- a/Tweets/Tweets.csproj
+++ b/Tweets/Tweets.csproj
@@ -97,6 +97,7 @@
     </Compile>
     <None Include="files\sentiments.csv" />
     <None Include="files\states.json" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
